# barium-cli

./: Cargo.toml
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: bar_kind.rs  bars.rs  command.rs  count.rs  execute.rs  files.rs  format.rs  main.rs  plates.rs  requirement.rs  writable.rs
