[package]
name = "barium-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
barium_core = "0.3.1"
clap = { version = "4.5.45", features = ["derive"] }
derive_more = "2.0.1"
dirs = "6.0.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
proc_macros = { path = "proc_macros" }
derivative = "2.2.0"
