[package]
name = "barium-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
barium_core = "0.5.5"
clap = { version = "4.5.47", features = ["derive"] }
derive_more = "2.0.1"
dirs = "6.0.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
derivative = "2.2.0"
uom = { version = "0.37.0",  features = ["autoconvert", "rational64", "si", "std", "serde"]}
